add url endpoint to retrive user data
